Basic layout structure and home page

--- a/starter-code/views/home.hbs
+++ b/starter-code/views/home.hbs
@@ -1,1 +1,25 @@
-{{pokemon.name}}
+<div class="card-container">
+  <div class="card-deck">
+    <div class="card">
+      <img src="https://ep01.epimg.net/internacional/imagenes/2017/04/19/mundo_global/1492619423_228631_1492619704_noticia_normal.jpg" class="card-img-top" alt="..." height="250px">
+      <div class="card-body">
+        <h5 class="card-title">Harry Potter</h5>
+        <p class="card-text">If you are a fan of Harry Potter just click on the image and let the journey begin!</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://gaminguardian.com/wp-content/uploads/2017/11/Pokemon.jpg" class="card-img-top" alt="..." height="250px">
+      <div class="card-body">
+        <h5 class="card-title">Pokemon</h5>
+        <p class="card-text">Click the image to see a pokedex.js in action</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://img-cdn.hipertextual.com/files/2019/12/hipertextual-se-filtra-coleccion-star-wars-con-todas-peliculas-saga-skywalker-2019015879.jpg?strip=all&lossy=1&quality=55&resize=740%2C490&ssl=1" class="card-img-top" alt="..." height="250px">
+      <div class="card-body">
+        <h5 class="card-title">Star Wars</h5>
+        <p class="card-text">If you click this image you will start a journey no a galaxy far far away...</p>
+      </div>
+    </div>
+  </div>
+</div>
