--- a/starter-code/views/home.hbs
+++ b/starter-code/views/home.hbs
@@ -1,25 +1,33 @@
-<div class="card-container">
-  <div class="card-deck">
-    <div class="card">
-      <img src="https://ep01.epimg.net/internacional/imagenes/2017/04/19/mundo_global/1492619423_228631_1492619704_noticia_normal.jpg" class="card-img-top" alt="..." height="250px">
-      <div class="card-body">
-        <h5 class="card-title">Harry Potter</h5>
-        <p class="card-text">If you are a fan of Harry Potter just click on the image and let the journey begin!</p>
-      </div>
+
+
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="display-4">Welcome to Random Wiki!</h1>
+    <p class="lead">Do you know every character of one of these sagas?</p>
+    <p>Choose one of the options below to pick a random character and see if you know them all!</p>
+  </div>
+</div>
+
+<div class="img-container">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+          <div class="carousel-item active">
+            <a href="#"><img src={{first}} class="d-block w-100" alt="..."></a>
+          </div>
+          {{#each rest}}
+            {{#with this}}
+              {{> carousel}}
+            {{/with}}
+          {{/each}}
     </div>
-    <div class="card">
-      <img src="https://gaminguardian.com/wp-content/uploads/2017/11/Pokemon.jpg" class="card-img-top" alt="..." height="250px">
-      <div class="card-body">
-        <h5 class="card-title">Pokemon</h5>
-        <p class="card-text">Click the image to see a pokedex.js in action</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://img-cdn.hipertextual.com/files/2019/12/hipertextual-se-filtra-coleccion-star-wars-con-todas-peliculas-saga-skywalker-2019015879.jpg?strip=all&lossy=1&quality=55&resize=740%2C490&ssl=1" class="card-img-top" alt="..." height="250px">
-      <div class="card-body">
-        <h5 class="card-title">Star Wars</h5>
-        <p class="card-text">If you click this image you will start a journey no a galaxy far far away...</p>
-      </div>
-    </div>
+
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
