--- a/starter-code/views/partials/carousel.hbs
+++ b/starter-code/views/partials/carousel.hbs
@@ -1,3 +1,3 @@
 <div class="carousel-item">
-  <a href="#"><img src={{path}} class="d-block w-100" alt="..."></a>
+  <a href={{path}}><img src={{url}} class="d-block w-100" alt="..."></a>
 </div>
