--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Welcome to Random Wiki<span class="sr-only">(current)</span></a>
+    <a class="navbar-brand" href="/">Welcome to Random Wiki<span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,9 +21,9 @@
             Topics
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Harry Potter</a>
-            <a class="dropdown-item" href="#">Pokemon</a>
-            <a class="dropdown-item" href="#">Star Wars</a>
+            <a class="dropdown-item" href="/harrypotter">Harry Potter</a>
+            <a class="dropdown-item" href="/pokemon">Pokemon</a>
+            <a class="dropdown-item" href="/starwars">Star Wars</a>
           </div>
         </li>
         <li class="nav-item">
