--- a/starter-code/public/css/style.css
+++ b/starter-code/public/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #3f3f3f;
+}
+
 .container {
   margin: 50px auto;
   width: 90vw;
@@ -9,7 +13,7 @@
 }
 
 footer {
-  background-color: lightgray ;
+  background: rgba(0,0,0,0);
   display: flex;
   justify-content: center;
   list-style: none;
@@ -47,13 +51,3 @@ p {
   background-size: cover;
 }
 
-.hp-img-container {
-  width: 40%;
-  margin: 20px;
-}
-
-.hp-container {
-  justify-content: space-evenly;
-  display: flex;
-  background: url("/public/images/parchment.jpg");
-}
