--- a/starter-code/views/harrypotter.hbs
+++ b/starter-code/views/harrypotter.hbs
@@ -1,4 +1,5 @@
 <script src="/scripts/vara.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/public/css/harrypotter.css">
 
 <div class="hp-container">
   <div class="hp-img-container">
