--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -9,7 +9,7 @@
   <title>Random Wiki 🤓</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/">Welcome to Random Wiki<span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
   
   {{{body}}}
 
-  <footer class="bg-dark">
+  <footer>
     <p>Created in 2020</p>
   </footer>
 
