--- a/starter-code/public/css/pokemon.css
+++ b/starter-code/public/css/pokemon.css
@@ -1,5 +1,5 @@
 body {
-  background-color : lightgray;
+  background-color : #3f3f3f;
 }
 
 #pokedex-container {
@@ -680,7 +680,7 @@ body {
 	{
 		width: 350px;
 		height: 80px;
-		background-color: #fff;
+		background-color: #3f3f3f;
 
 		border-top-right-radius: 30px;
 		-webkit-border-top-right-radius: 30px;
@@ -692,7 +692,7 @@ body {
 	{
 		width: 216px;
 		height: 100px;
-		background-color: #fff;
+		background-color: #3f3f3f;
 		float: left;
 
 		position: absolute;
